--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 	<link href="https://fonts.googleapis.com/css?family=Exo+2|Roboto&display=swap" rel="stylesheet">
 	<script type="text/javascript" src="js/typed.js"></script>
+	<script type="text/javascript" src="js/aos.js"></script>
 	<script type="text/javascript" src="js/jquery-3.4.1.min.js"></script>
 	<!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css">
@@ -63,8 +64,8 @@
 				</div>
 				<span id="typed"></span>
 			</h1>
-		<h2>НА ПРАВОМ СТЕ МЕСТУ</h2>
-      	<a href="#pocetak" class="scroll-down" data-aos="zoom-in" data-aos-delay="1500"><i class="animated infinite pulse fas fa-chevron-down"></i></a>
+		<h2 class="animated fadeInDown delay-6s">НА ПРАВОМ СТЕ МЕСТУ</h2>
+      	<a href="#pocetak" class="scroll-down animated fadeInDown delay-6s"><i class="animated infinite pulse fas fa-chevron-down"></i></a>
     </div>
   </header>
 
@@ -72,11 +73,11 @@
         <div class="row">
 	        <div class="col">
 	        	<div class="txt-holder">
-		        	<h2>Почело је, али...</h2>
-		        	<hr class="hr">
-		        	<p>Покренули сте приватан посао, имате квалитетан производ или нудите одличну услугу, али људи још увек нису чули за Вас?</p>
-		        	<p class="lead">Билборди и телевизијске рекламе су застарели и неефикасни облици рекламирања. Свет се одавно преселио на интернет.</p>
-		        	<p class="lead">Лепо дизајниран веб-сајт, који је увек на првој страници Гугл претраге, уз добро осмишљену промотивну кампању на друштвеним мрежама, гарантује да ће за Вас сазнати велики број људи, а то је кључни фактор успеха у сваком послу.</p>
+		        	<h2 data-aos="fade-right">Почело је, али...</h2>
+		        	<hr data-aos="flip-left" class="hr">
+		        	<p data-aos="zoom-in-right">Покренули сте приватан посао, имате квалитетан производ или нудите одличну услугу, али људи још увек нису чули за Вас?</p>
+		        	<p data-aos="zoom-out">Билборди и телевизијске рекламе су застарели и неефикасни облици рекламирања. Свет се одавно преселио на интернет.</p>
+		        	<p data-aos="zoom-out-right">Лепо дизајниран веб-сајт, који је увек на првој страници Гугл претраге, уз добро осмишљену промотивну кампању на друштвеним мрежама, гарантује да ће за Вас сазнати велики број људи, а то је кључни фактор успеха у сваком послу.</p>
 		        </div>
 	        </div>
         	<div class="col imgbkg"></div>
@@ -89,27 +90,27 @@
 
     <section id="kako" class="container2">
     	<div class="txt-holder">
-    		<h2>Наше услуге</h2>
-    		<p>Нудимо све што је потребно за стварање препознатљивог бренда и промовисање  Вашег посла у сваком смислу:</p>
+    		<h2 data-aos="fade-down-right">Наше услуге</h2>
+    		<p data-aos="flip-down">Нудимо све што је потребно за стварање препознатљивог бренда и промовисање  Вашег посла у сваком смислу:</p>
     	</div>
         <div class="row2">
-        	<div class="col2 info-card">
+        	<div data-aos="zoom-in-up" class="col2 info-card">
         			<h2>Дизајнирање логоа</h2>
         			<h1 class="card-icon"><i class="fas fa-pencil-ruler"></i></h1>
         			<p>Први корак у стварању бренда. Креирање симбола по којем ће Ваша фирма бити препознатљива</p>
         	</div>
-        	<div class="col2 info-card">
+        	<div data-aos="zoom-in-up" class="col2 info-card">
         		<h2>Израда веб-сајтова</h2>
         		<h1 class="card-icon"><i class="fas fa-desktop"></i> <span><i class="fas fa-tablet-alt"></i></span></h1>
         		<p>Веб-сајтови су Ваше пословнице у савременом свету. Модерно дизајниран и функционалан веб-сајт показује озбиљност у пословању.</p>
         		<!--<p>Сви наши веб-сајатови имају прилагодљив приказ што значи да изгледају добро на свим уређајима. 67% укупног интернет саобраћаја у 2018. је обављен путем мобилних уређаја.</p> -->
         	</div>
-        	<div class="col2 info-card">
+        	<div data-aos="zoom-in-up" class="col2 info-card">
         		<h2>Гугл оптимизација</h2>
         		<h1 class="card-icon"><i class="fas fa-chevron-right"></i> <i class="fab fa-searchengin"></i> <i class="fas fa-chevron-left"></i></h1>
         		<p>Када нам треба нешто, прво што урадимо јесте да претражимо на Гуглу. Врло је важно да се Ваш сајт појави на првој страници претраге.</p>
         	</div>
-        	<div class="col2 info-card">
+        	<div data-aos="zoom-in-up" class="col2 info-card">
         		<h2>Промотивна кампања</h2>
         		<h1 class="card-icon"><i class="fab fa-facebook-square"></i> <i class="fab fa-instagram"></i></h1>
         		<p>Практично цео свет је на друштвеним мрежама и то је сјајна прилика да допремо до сваког потенцијалног корисника Ваших услуга.</p>
@@ -130,7 +131,7 @@
     		<p>Упаковали смо нашу понуду тако да свако може да пронађе оно што му одговара:</p>
     	</div>
         <div class="row2">
-        	<div class="col2 info-card">
+        	<div data-aos="flip-left" class="col2 info-card">
         		<h2>Основни</h2>
         		<h3>€100 једнократно</h3>
         		<h3>€15 месечно</h3>
@@ -139,7 +140,7 @@
         		<p>закуп хостинга</p>
         		<p>одржавање веб-сајта</p>
         	</div>
-        	<div class="col2 info-card">
+        	<div data-aos="flip-left" class="col2 info-card">
         		<h2>Солидан</h2>
         		<h3>€300 једнократно</h3>
         		<h3>€30 месечно</h3>
@@ -151,7 +152,7 @@
         		<p>оптимизација Гугл претраге</p>
         		<p>промотивна кампања у трајању од месец дана</p>
         	</div>
-        	<div class="col2 info-card">
+        	<div data-aos="flip-left" class="col2 info-card">
         		<h2>Супериоран</h2>
         		<h3>€500 једнократно</h3>
         		<h3>€50 месечно</h3>
@@ -177,8 +178,8 @@
 		        	<p class="lead">У Линк Маркетингу схватамо да је за предузетнике непрактично да се упуштају у истраживање начина функционисања савремених технологија.</p>
 		        	<p class="lead">Слободно нас позовите да обавимо информативни разговор, радо ћемо Вам све објаснити. Направићемо понуду која ће на најбољи начин одговорити Вашим потребама</p>
 		        	<div class="next">
-		        		<a href="#about" data-aos="zoom-in" data-aos-delay="1500">
-		        			<p>контакт информације</p>
+		        		<a href="#contact" data-aos="zoom-in" data-aos-delay="1500">
+		        			<p>контакт</p>
 		        			<i class="animated infinite pulse fas fa-chevron-down"></i>
 		        		</a>
 		        	</div>
@@ -236,6 +237,9 @@
 	    typeSpeed: 70,
 	    backSpeed: 40
 	  });
+	</script>
+	<script>
+		AOS.init();
 	</script>
 </body>
 </html>
