--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Линк Маркетинг</title>
+	<title>Link Marketing</title>
 
     <!-- Required meta tags -->
     <meta property="og:image" content="media/img/cv.jpg">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
-    content="Линк Маркетинг је фирма која се бави израдом веб-сајтова, дизајнирањем логоа и вођењем рекламних кампања.">
+    content="Link Marketing je firma koja se bavi izradom veb-sajtova, dizajniranjem logoa i vođenjem reklamnih kampanja.">
     <meta name="keywords" content="izrada sajtova, izrada veb sajtova, izrada veb-sajtova sajt, veb sajt, veb, veb-sajt, reklama, marketing, prvo mesto na gugl pretrazi">
     <!-- favicon -->
     <link rel="icon" href="icon.ico" type="image/x-icon" />
@@ -28,18 +28,18 @@
 <body>
 		<div class="overlaid"></div>
 		<nav>
-			<div id="shrinked" class="toggle"><a href='#'><img src='media/img/linklogoo.png' style="padding-top: 5px; height: 50px;"></a><i
+			<div id="shrinked" class="toggle"><a href='#'><img src='media/img/linklogoo.png' style="padding-top: 3px; height: 45px;"></a><i
 	        class="fas fa-bars menu" aria-hidden="true"></i></div>
 	        <div id="logoWide">
 	        	<a href="#">
-	        		<div id="logo-img"><img src="media/img/linklogoo.png" style="padding-top: 5px; height: 50px;"></div><span id="logo-txt">ЛИНК МАРКЕТИНГ</span>
+	        		<div id="logo-img"><img src="media/img/linklogoo.png" style="padding-top: 3px; height: 45px;"></div><span id="logo-txt">LINK MARKETING</span>
 	        	</a>
 	        </div>
 	        <ul>
-	        	<li class="tags return"><a href="#">ПОЧЕТАК</a></li>
-		    	<li class="tags"><a href="#kako">УСЛУГЕ</a></li>
-		    	<li class="tags"><a href="#paketi">ПАКЕТИ</a></li>
-			    <li class="tags"><a href="#contact">КОНТАКТ</a></li>
+	        	<li class="tags return"><a href="#">POČETAK</a></li>
+		    	<li class="tags"><a href="#kako">USLUGE</a></li>
+		    	<li class="tags"><a href="#paketi">PAKETI</a></li>
+			    <li class="tags"><a href="#contact">KONTAKT</a></li>
 	    	</ul>
 		</nav>
 
@@ -55,17 +55,17 @@
     </div>
     <div class="header-overlay"></div>
     <div class="header-content text-md-center">
-		<h1>Треба Вам </h1>
+		<h1>Treba Vam </h1>
 			<h1>
 				<div id="typed-strings">
-					<p>веб-сајт?</p>
-					<p>реклама?</p>
-					<p>промотивна кампања?</p>
+					<p>veb-sajt?</p>
+					<p>logo?</p>
+					<p>promotivna kampanja?</p>
 				</div>
 				<span id="typed"></span>
 			</h1>
-		<h2 class="animated fadeInDown delay-6s">НА ПРАВОМ СТЕ МЕСТУ</h2>
-      	<a href="#pocetak" class="scroll-down animated fadeInDown delay-6s"><i class="animated infinite pulse fas fa-chevron-down"></i></a>
+		<h2 class="animated fadeInDown delay-6s">NAPRAVOM STE MESTU</h2>
+      	<a href="#pocetak" class="scroll-down animated fadeInDown delay-6s"><i class="animated infinite pulse fas fa-angle-double-down"></i></a>
     </div>
   </header>
 
@@ -73,11 +73,16 @@
         <div class="row">
 	        <div class="col">
 	        	<div class="txt-holder">
-		        	<h2 data-aos="fade-right">Почело је, али...</h2>
+		        	<h2 data-aos="fade-right" class="pt-175">Počelo je, ali...</h2>
 		        	<hr data-aos="flip-left" class="hr">
-		        	<p data-aos="zoom-in-right">Покренули сте приватан посао, имате квалитетан производ или нудите одличну услугу, али људи још увек нису чули за Вас?</p>
-		        	<p data-aos="zoom-out">Билборди и телевизијске рекламе су застарели и неефикасни облици рекламирања. Свет се одавно преселио на интернет.</p>
-		        	<p data-aos="zoom-out-right">Лепо дизајниран веб-сајт, који је увек на првој страници Гугл претраге, уз добро осмишљену промотивну кампању на друштвеним мрежама, гарантује да ће за Вас сазнати велики број људи, а то је кључни фактор успеха у сваком послу.</p>
+		        	<p data-aos="zoom-in-right">Pokrenuli ste privatan posao, imate kvalitetan proizvod ili nudite odličnu uslugu, ali <em>ljudi još uvek nisu čuli za Vas?</em></p>
+		        	<p data-aos="zoom-out">Bilbordi i televizijske reklame su zastareli i neefikasni oblici reklamiranja. Svet se odavno preselio na internet.</p>
+		        	<p data-aos="zoom-out-right"><em>Lepo dizajniran veb-sajt</em>, koji je <em>uvek na prvoj stranici Gugl pretrage</em>, uz dobro osmišljenu promotivnu kampanju na društvenim mrežama, <em>garantuje da će za Vas saznati veliki broj ljudi</em>, a to je ključni faktor uspeha u svakom poslu.</p>
+		        </div>
+		        <div class="next" data-aos="zoom-in">
+		        	<a href="#kako">
+		        		<i class="animated infinite pulse delay-1s fas fa-chevron-circle-down"></i>
+		        	</a>
 		        </div>
 	        </div>
         	<div class="col imgbkg"></div>
@@ -90,81 +95,101 @@
 
     <section id="kako" class="container2">
     	<div class="txt-holder">
-    		<h2 data-aos="fade-down-right">Наше услуге</h2>
-    		<p data-aos="flip-down">Нудимо све што је потребно за стварање препознатљивог бренда и промовисање  Вашег посла у сваком смислу:</p>
+    		<h2 data-aos="fade-down-right" class="pt-175">Naše usluge</h2>
+    		<p data-aos="flip-down">Nudimo sve što je potrebno za <em class="oranged">stvaranje prepoznatljivog brenda</em> i <em class="oranged">promovisanje  Vašeg posla</em> u svakom smislu:</p>
     	</div>
         <div class="row2">
         	<div data-aos="zoom-in-up" class="col2 info-card">
-        			<h2>Дизајнирање логоа</h2>
+        			<h2>Dizajniranje logoa</h2>
         			<h1 class="card-icon"><i class="fas fa-pencil-ruler"></i></h1>
-        			<p>Први корак у стварању бренда. Креирање симбола по којем ће Ваша фирма бити препознатљива</p>
+        			<p>Prvi korak u stvaranju brenda. Kreiranje simbola po kojem će Vaša firma biti prepoznatljiva</p>
         	</div>
         	<div data-aos="zoom-in-up" class="col2 info-card">
-        		<h2>Израда веб-сајтова</h2>
+        		<h2>Izrada veb-sajtova</h2>
         		<h1 class="card-icon"><i class="fas fa-desktop"></i> <span><i class="fas fa-tablet-alt"></i></span></h1>
-        		<p>Веб-сајтови су Ваше пословнице у савременом свету. Модерно дизајниран и функционалан веб-сајт показује озбиљност у пословању.</p>
-        		<!--<p>Сви наши веб-сајатови имају прилагодљив приказ што значи да изгледају добро на свим уређајима. 67% укупног интернет саобраћаја у 2018. је обављен путем мобилних уређаја.</p> -->
+        		<p>Veb-sajtovi su Vaše poslovnice u savremenom svetu. Moderno dizajniran i funkcionalan veb-sajt pokazuje ozbiljnost u poslovanju.</p>
+        		<!--<p>Svi naši veb-sajatovi imaju prilagodljiv prikaz što znači da izgledaju dobro na svim uređajima. 67% ukupnog internet saobraćaja u 2018. je obavljen putem mobilnih uređaja.</p> -->
         	</div>
         	<div data-aos="zoom-in-up" class="col2 info-card">
-        		<h2>Гугл оптимизација</h2>
+        		<h2>Gugl optimizacija</h2>
         		<h1 class="card-icon"><i class="fas fa-chevron-right"></i> <i class="fab fa-searchengin"></i> <i class="fas fa-chevron-left"></i></h1>
-        		<p>Када нам треба нешто, прво што урадимо јесте да претражимо на Гуглу. Врло је важно да се Ваш сајт појави на првој страници претраге.</p>
+        		<p>Kada nam treba nešto, prvo što uradimo jeste da pretražimo na Guglu. Vrlo je važno da se Vaš sajt pojavi na prvoj stranici pretrage.</p>
         	</div>
         	<div data-aos="zoom-in-up" class="col2 info-card">
-        		<h2>Промотивна кампања</h2>
+        		<h2>Promotivna kampanja</h2>
         		<h1 class="card-icon"><i class="fab fa-facebook-square"></i> <i class="fab fa-instagram"></i></h1>
-        		<p>Практично цео свет је на друштвеним мрежама и то је сјајна прилика да допремо до сваког потенцијалног корисника Ваших услуга.</p>
+        		<p>Praktično ceo svet je na društvenim mrežama i to je sjajna prilika da dopremo do svakog potencijalnog korisnika Vaših usluga.</p>
         	</div>
         </div>
+        <div class="next" data-aos="zoom-in">
+		    <a href="#paketi">
+		        <i class="animated infinite pulse delay-1s fas fa-chevron-circle-down"></i>
+		        </a>
+		    </div>
     </section>
 
    	<div class="parallax">
    		<div>
-	   		<h2>Суштина нашег пословања јесте у повезивању: спајамо људе којима је потребна услуга са онима који је нуде. Наш циљ је да се уз минимални утрошак средстава и енергије, повежу одговарајући људи.</h2>
-	   		<h3>- Линк Маркетинг Тим</h3>
+	   		<h2>Suština našeg poslovanja jeste u povezivanju: spajamo ljude kojima je potrebna usluga sa onima koji je nude. Naš cilj je da se uz minimalni utrošak sredstava i energije, povežu odgovarajući ljudi.</h2>
+	   		<h3>- Link Marketing Tim</h3>
 	   	</div>
    	</div>
 
-	<section id="paketi" class="container2">
+	<section id="paketi" class="container2 pb-15">
     	<div class="txt-holder">
-    		<h2>Пакети услуга</h2>
-    		<p>Упаковали смо нашу понуду тако да свако може да пронађе оно што му одговара:</p>
+    		<h2 class="pt-175">Paketi usluga</h2>
+    		<p>Upakovali smo našu ponudu tako da svako može da pronađe ono što mu odgovara:</p>
     	</div>
         <div class="row2">
         	<div data-aos="flip-left" class="col2 info-card">
-        		<h2>Основни</h2>
-        		<h3>€100 једнократно</h3>
-        		<h3>€15 месечно</h3>
-        		<p>израда веб-сајта</p>
-        		<p>закуп домена</p>
-        		<p>закуп хостинга</p>
-        		<p>одржавање веб-сајта</p>
+        		<h2 class="borderShaded">Osnovni</h2>
+        		<h3>€100 jednokratno</h3>
+        		<h3 class="borderShaded2">€15 mesečno</h3>
+        		<p><i class="small-ico fas fa-desktop"></i>izrada veb-sajta</p>
+        		<p><i class="small-ico fas fa-globe-americas"></i>zakup domena</p>
+        		<p><i class="small-ico fab fa-steam-square"></i>zakup hostinga</p>
+        		<p><i class="small-ico fas fa-tools"></i>održavanje veb-sajta</p>
         	</div>
         	<div data-aos="flip-left" class="col2 info-card">
-        		<h2>Солидан</h2>
-        		<h3>€300 једнократно</h3>
-        		<h3>€30 месечно</h3>
-        		<p>израда логоа</p>
-        		<p>израда веб-сајта</p>
-        		<p>закуп домена</p>
-        		<p>закуп хостинга</p>
-        		<p>одржавање веб-сајта</p>
-        		<p>оптимизација Гугл претраге</p>
-        		<p>промотивна кампања у трајању од месец дана</p>
+        		<h2 class="borderShaded">Standard</h2>
+        		<h3>€300 jednokratno</h3>
+        		<h3 class="borderShaded2">€30 mesečno</h3>
+        		<p>izrada logoa</p>
+        		<p>izrada veb-sajta</p>
+        		<p>zakup domena</p>
+        		<p>zakup hostinga</p>
+        		<p>održavanje veb-sajta</p>
+        		<p>e-mail servis</p>
+        		<p>osnovna Google SEO</p>
+        		<p>promotivna kampanja u trajanju od mesec dana</p>
+        		<!--! 
+
+        		<p class="tooltip">osnovna Google SEO<span class="tooltiptext">Google SEO (Search Engine Optimization) podrazumeva podešavanja koja povećavaju šansu da se Vaš veb-sajt pojavi na prvoj strani, kada neko pretražuje odgovarajuće reči</span></p>
+        		<br>
+        		<p class="tooltip">promotivna kampanja u trajanju od mesec dana<span class="tooltiptext">Na društvenim mrežama Facebook i Instagram privlačimo stvarne, takozvane „organske“ pratioce. Kroz plaćene reklame dosežemo do ciljane publike koji su Vaši potencijalni klijenti</span></p>
+        		-->
         	</div>
         	<div data-aos="flip-left" class="col2 info-card">
-        		<h2>Супериоран</h2>
-        		<h3>€500 једнократно</h3>
-        		<h3>€50 месечно</h3>
-        		<p>израда логоа</p>
-        		<p>израда веб-сајта</p>
-        		<p>закуп домена</p>
-        		<p>закуп хостинга</p>
-        		<p>одржавање веб-сајта</p>
-        		<p>прва страна Гугл претраге</p>
-        		<p>промотивна кампања у трајању од три месеца</p>
+        		<h2 class="borderShaded">Superioran</h2>
+        		<h3>€500 jednokratno</h3>
+        		<h3 class="borderShaded2">€50 mesečno</h3>
+        		<p>izrada logoa</p>
+        		<p>izrada veb-sajta</p>
+        		<p>zakup domena</p>
+        		<p>zakup hostinga</p>
+        		<p>održavanje veb-sajta</p>
+        		<p>e-mail servis</p>
+        		<p>napredna Google SEO</p>
+        		<p><em>prva strana Google pretrage</em></p>
+        		<p>promotivna kampanja u trajanju od <em>tri meseca</em></p>
+        		<p>redovno izveštavanje o svim parametrima kroz Google Analytics</p>
         	</div>
         </div>
+		        <div class="next">
+		        	<a href="#poziv">
+		        		<i class="animated infinite pulse delay-1s fas fa-chevron-circle-down"></i>
+		        	</a>
+		        </div>
     </section>
 
    	<section id="poziv">
@@ -172,15 +197,14 @@
         	<div class="col imgbkg2"></div>
 	        <div class="col">
 	        	<div class="txt-holder">
-		        	<h2>Како одлучити?</h2>
+		        	<h2 class="pt-175">Kako odlučiti?</h2>
 		        	<hr>
-		        	<p>Преплављни сте сличним понудама? Видели сте све, али Вам ништа није јасно?</p>
-		        	<p class="lead">У Линк Маркетингу схватамо да је за предузетнике непрактично да се упуштају у истраживање начина функционисања савремених технологија.</p>
-		        	<p class="lead">Слободно нас позовите да обавимо информативни разговор, радо ћемо Вам све објаснити. Направићемо понуду која ће на најбољи начин одговорити Вашим потребама</p>
-		        	<div class="next">
-		        		<a href="#contact" data-aos="zoom-in" data-aos-delay="1500">
-		        			<p>контакт</p>
-		        			<i class="animated infinite pulse fas fa-chevron-down"></i>
+		        	<p>Preplavljni ste sličnim ponudama? Videli ste sve, ali Vam ništa nije jasno?</p>
+		        	<p class="lead">U Link Marketingu shvatamo da je za preduzetnike nepraktično da se upuštaju u istraživanje načina funkcionisanja savremenih tehnologija.</p>
+		        	<p class="lead"><em class="oranged">Slobodno nas pozovite</em> da obavimo informativni razgovor, rado ćemo Vam sve objasniti. Napravićemo ponudu koja će na najbolji način odgovoriti Vašim potrebama</p>
+		        	<div class="next" data-aos="zoom-in">
+		        		<a href="#contact">
+		        			<i class="animated infinite pulse delay-1s fas fa-angle-double-down"></i>
 		        		</a>
 		        	</div>
 		        </div>
@@ -189,7 +213,7 @@
     </section>
 
     <div class="friends">
-	    <h2>наши задовољни клијенти</h2>
+	    <h2>naši zadovoljni klijenti</h2>
 	    <div class="ribbon">
 	    	<a href="https://teatarulica.com"><img src="media/img/teatar.png" style="height: 100px"></a>
 	    	<a href="https://aedeba.com"><img src="media/img/aedeba.png" style="height: 100px"></a>
@@ -202,26 +226,26 @@
         <div class="row img-bg">
 	        <div class="col">
 	        	<div class="txt-holder">
-		        	<h2>Контакт</h2>
+		        	<h2 class="pt-175">Kontakt</h2>
 		        	<hr>
-		        	<h5>Адреса:</h5>
-		        	<p>Угриновачки пут 16М, 11080 Земун</p>
-		        	<h5>Телефон:</h5>
+		        	<h5>Adresa:</h5>
+		        	<p>Ugrinovački put 16M, 11080 Zemun</p>
+		        	<h5>Telefon:</h5>
 		        	<p class="lead">+381 63 88 31 667</p>
 		        	<p class="lead">+381 60 05 333 52</p>
-		        	<h5 class="lead">Имејл:</h5>
+		        	<h5 class="lead">Imejl:</h5>
 		        	<p>linkmarketing@gmail.com</p>
 		        </div>
 	        </div>
 	        <div class="col">
 	        	<div class="txt-holder input-form">
-		        	<h4>Пишите на наш имејл</h4>
-		        	<input class="input" type="text" id="lname" name="lastname" placeholder="Име и презиме">
-		        	<input class="input" type="text" id="lname" name="lastname" placeholder="Ваш имејл">
-		        	<input class="input" type="text" id="lname" name="lastname" placeholder="Ваш телефон">
-		        	<textarea class="input" id="subject" name="subject" placeholder="Питајте све што Вас занима..." style="height:200px"></textarea>
-		        	<button class="my-button">Пошаљи <i class="fas fa-paper-plane"></i></button>
-		        	<p class="under-button">Одговорићемо у најкраћем могућем року</p>
+		        	<h4 class="pt-175">Pišite na naš imejl</h4>
+		        	<input class="input" type="text" id="lname" name="lastname" placeholder="Ime i prezime">
+		        	<input class="input" type="text" id="lname" name="lastname" placeholder="Vaš imejl">
+		        	<input class="input" type="text" id="lname" name="lastname" placeholder="Vaš telefon">
+		        	<textarea class="input" id="subject" name="subject" placeholder="Pitajte sve što Vas zanima..." style="height:200px"></textarea>
+		        	<button class="my-button">Pošalji <i class="fas fa-paper-plane"></i></button>
+		        	<p class="under-button">Odgovorićemo u najkraćem mogućem roku</p>
 		        </div>
 	        </div>
         </div>
@@ -241,5 +265,7 @@
 	<script>
 		AOS.init();
 	</script>
+
+  <script src="js/general.js"></script>
 </body>
 </html>
