--- a/index.html
+++ b/index.html
@@ -154,14 +154,14 @@
         		<h2 class="borderShaded">Standard</h2>
         		<h3>€300 jednokratno</h3>
         		<h3 class="borderShaded2">€30 mesečno</h3>
-        		<p>izrada logoa</p>
-        		<p>izrada veb-sajta</p>
-        		<p>zakup domena</p>
-        		<p>zakup hostinga</p>
-        		<p>održavanje veb-sajta</p>
-        		<p>e-mail servis</p>
-        		<p>osnovna Google SEO</p>
-        		<p>promotivna kampanja u trajanju od mesec dana</p>
+        		<p><i class="small-ico fab fa-battle-net"></i>izrada logoa</p>
+        		<p><i class="small-ico fas fa-desktop"></i>izrada veb-sajta</p>
+        		<p><i class="small-ico fas fa-globe-americas"></i>zakup domena</p>
+        		<p><i class="small-ico fab fa-steam-square"></i>zakup hostinga</p>
+        		<p><i class="small-ico fas fa-tools"></i>održavanje veb-sajta</p>
+        		<p><i class="small-ico fas fa-envelope"></i>e-mail servis</p>
+        		<p><i class="small-ico fas fa-search"></i>osnovna Google SEO</p>
+        		<p><i class="small-ico fas fa-bullhorn"></i>promotivna kampanja u trajanju od mesec dana</p>
         		<!--! 
 
         		<p class="tooltip">osnovna Google SEO<span class="tooltiptext">Google SEO (Search Engine Optimization) podrazumeva podešavanja koja povećavaju šansu da se Vaš veb-sajt pojavi na prvoj strani, kada neko pretražuje odgovarajuće reči</span></p>
@@ -173,16 +173,16 @@
         		<h2 class="borderShaded">Superioran</h2>
         		<h3>€500 jednokratno</h3>
         		<h3 class="borderShaded2">€50 mesečno</h3>
-        		<p>izrada logoa</p>
-        		<p>izrada veb-sajta</p>
-        		<p>zakup domena</p>
-        		<p>zakup hostinga</p>
-        		<p>održavanje veb-sajta</p>
-        		<p>e-mail servis</p>
-        		<p>napredna Google SEO</p>
-        		<p><em>prva strana Google pretrage</em></p>
-        		<p>promotivna kampanja u trajanju od <em>tri meseca</em></p>
-        		<p>redovno izveštavanje o svim parametrima kroz Google Analytics</p>
+        		<p><i class="small-ico fab fa-studiovinari"></i>izrada logoa</p>
+        		<p><i class="small-ico fas fa-desktop"></i>izrada veb-sajta</p>
+        		<p><i class="small-ico fas fa-globe-americas"></i>zakup domena</p>
+        		<p><i class="small-ico fab fa-steam-square"></i>zakup hostinga</p>
+        		<p><i class="small-ico fas fa-tools"></i>održavanje veb-sajta</p>
+        		<p><i class="small-ico fas fa-envelope"></i>e-mail servis</p>
+        		<p><i class="small-ico fas fa-sitemap"></i>napredna Google SEO</p>
+        		<p><i class="small-ico fas fa-trophy"></i><em>prva strana Google pretrage</em></p>
+        		<p><i class="small-ico fas fa-bullhorn"></i>promotivna kampanja u trajanju od <em>tri meseca</em></p>
+        		<p><i class="small-ico far fa-chart-bar"></i> redovno izveštavanje o svim parametrima kroz Google Analytics</p>
         	</div>
         </div>
 		        <div class="next">
