--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description"
     content="Link Marketing je firma koja se bavi izradom veb-sajtova, dizajniranjem logoa i vođenjem reklamnih kampanja.">
-    <meta name="keywords" content="izrada sajtova, izrada veb sajtova, izrada veb-sajtova sajt, veb sajt, veb, veb-sajt, reklama, marketing, prvo mesto na gugl pretrazi">
+    <meta name="keywords" content="Link Marketing, link marketing, izrada sajtova, izrada veb sajtova, izrada veb-sajtova sajt, veb sajt, veb, veb-sajt, reklama, marketing, prvo mesto na gugl pretrazi">
     <!-- favicon -->
     <link rel="icon" href="icon.ico" type="image/x-icon" />
     <!-- animations on scroll -->
@@ -64,7 +64,7 @@
 				</div>
 				<span id="typed"></span>
 			</h1>
-		<h2 class="animated fadeInDown delay-6s">NAPRAVOM STE MESTU</h2>
+		<h2 class="animated fadeInDown delay-6s">NA PRAVOM STE MESTU</h2>
       	<a href="#pocetak" class="scroll-down animated fadeInDown delay-6s"><i class="animated infinite pulse fas fa-angle-double-down"></i></a>
     </div>
   </header>
@@ -73,10 +73,13 @@
         <div class="row">
 	        <div class="col">
 	        	<div class="txt-holder">
-		        	<h2 data-aos="fade-right" class="pt-175">Počelo je, ali...</h2>
-		        	<hr data-aos="flip-left" class="hr">
-		        	<p data-aos="zoom-in-right">Pokrenuli ste privatan posao, imate kvalitetan proizvod ili nudite odličnu uslugu, ali <em>ljudi još uvek nisu čuli za Vas?</em></p>
+		        	<p class="pt-175" data-aos="zoom-in-right">Pokrenuli ste privatan posao, imate kvalitetan proizvod ili nudite odličnu uslugu, ali <em>ljudi još uvek nisu čuli za Vas?</em></p>
 		        	<p data-aos="zoom-out">Bilbordi i televizijske reklame su zastareli i neefikasni oblici reklamiranja. Svet se odavno preselio na internet.</p>
+		        	<div data-aos="flip-up">
+			        	<h1 class="inline headline mr-2">Link Marketing</h1>
+			        	<p class="inline">je deo koji nedostaje</p>
+			        	<hr>
+		        	</div>
 		        	<p data-aos="zoom-out-right"><em>Lepo dizajniran veb-sajt</em>, koji je <em>uvek na prvoj stranici Gugl pretrage</em>, uz dobro osmišljenu promotivnu kampanju na društvenim mrežama, <em>garantuje da će za Vas saznati veliki broj ljudi</em>, a to je ključni faktor uspeha u svakom poslu.</p>
 		        </div>
 		        <div class="next" data-aos="zoom-in">
@@ -154,14 +157,14 @@
         		<h2 class="borderShaded">Standard</h2>
         		<h3>€300 jednokratno</h3>
         		<h3 class="borderShaded2">€30 mesečno</h3>
-        		<p><i class="small-ico fab fa-battle-net"></i>izrada logoa</p>
+        		<p><i class="small-ico fab fa-atlassian"></i>izrada logoa</p>
         		<p><i class="small-ico fas fa-desktop"></i>izrada veb-sajta</p>
         		<p><i class="small-ico fas fa-globe-americas"></i>zakup domena</p>
         		<p><i class="small-ico fab fa-steam-square"></i>zakup hostinga</p>
         		<p><i class="small-ico fas fa-tools"></i>održavanje veb-sajta</p>
         		<p><i class="small-ico fas fa-envelope"></i>e-mail servis</p>
         		<p><i class="small-ico fas fa-search"></i>osnovna Google SEO</p>
-        		<p><i class="small-ico fas fa-bullhorn"></i>promotivna kampanja u trajanju od mesec dana</p>
+        		<p class="card-text"><i class="small-ico fas fa-bullhorn"></i>promotivna kampanja u trajanju od mesec dana</p>
         		<!--! 
 
         		<p class="tooltip">osnovna Google SEO<span class="tooltiptext">Google SEO (Search Engine Optimization) podrazumeva podešavanja koja povećavaju šansu da se Vaš veb-sajt pojavi na prvoj strani, kada neko pretražuje odgovarajuće reči</span></p>
@@ -173,16 +176,16 @@
         		<h2 class="borderShaded">Superioran</h2>
         		<h3>€500 jednokratno</h3>
         		<h3 class="borderShaded2">€50 mesečno</h3>
-        		<p><i class="small-ico fab fa-studiovinari"></i>izrada logoa</p>
+        		<p><i class="small-ico fab fa-atlassian"></i>izrada logoa</p>
         		<p><i class="small-ico fas fa-desktop"></i>izrada veb-sajta</p>
         		<p><i class="small-ico fas fa-globe-americas"></i>zakup domena</p>
         		<p><i class="small-ico fab fa-steam-square"></i>zakup hostinga</p>
         		<p><i class="small-ico fas fa-tools"></i>održavanje veb-sajta</p>
         		<p><i class="small-ico fas fa-envelope"></i>e-mail servis</p>
         		<p><i class="small-ico fas fa-sitemap"></i>napredna Google SEO</p>
-        		<p><i class="small-ico fas fa-trophy"></i><em>prva strana Google pretrage</em></p>
-        		<p><i class="small-ico fas fa-bullhorn"></i>promotivna kampanja u trajanju od <em>tri meseca</em></p>
-        		<p><i class="small-ico far fa-chart-bar"></i> redovno izveštavanje o svim parametrima kroz Google Analytics</p>
+        		<p class="card-text"><i class="small-ico fas fa-trophy"></i><em>prva strana Google pretrage</em></p>
+        		<p class="card-text"><i class="small-ico fas fa-bullhorn"></i>promotivna kampanja u trajanju od <em>tri meseca</em></p>
+        		<p class="card-text"><i class="small-ico far fa-chart-bar"></i> redovno izveštavanje o svim parametrima kroz Google Analytics</p>
         	</div>
         </div>
 		        <div class="next">
@@ -201,7 +204,7 @@
 		        	<hr>
 		        	<p>Preplavljni ste sličnim ponudama? Videli ste sve, ali Vam ništa nije jasno?</p>
 		        	<p class="lead">U Link Marketingu shvatamo da je za preduzetnike nepraktično da se upuštaju u istraživanje načina funkcionisanja savremenih tehnologija.</p>
-		        	<p class="lead"><em class="oranged">Slobodno nas pozovite</em> da obavimo informativni razgovor, rado ćemo Vam sve objasniti. Napravićemo ponudu koja će na najbolji način odgovoriti Vašim potrebama</p>
+		        	<p class="lead"><em class="oranged">Slobodno nas pozovite</em> da obavimo informativni razgovor, rado ćemo Vam sve objasniti. Napravićemo posebnu ponudu koja će na najbolji način odgovoriti Vašim potrebama</p>
 		        	<div class="next" data-aos="zoom-in">
 		        		<a href="#contact">
 		        			<i class="animated infinite pulse delay-1s fas fa-angle-double-down"></i>
@@ -215,9 +218,9 @@
     <div class="friends">
 	    <h2>naši zadovoljni klijenti</h2>
 	    <div class="ribbon">
-	    	<a href="https://teatarulica.com"><img src="media/img/teatar.png" style="height: 100px"></a>
-	    	<a href="https://aedeba.com"><img src="media/img/aedeba.png" style="height: 100px"></a>
-	          <a href="https://www.kentaur-enduro-serbia.com/"><img src="media/img/kentaur-logo.png" style="height: 100px"></a>
+	    	<a href="https://teatarulica.com" target="_blank"><img src="media/img/teatar.png" style="height: 100px"></a>
+	    	<a href="https://aedeba.com" target="_blank"><img src="media/img/aedeba.png" style="height: 100px"></a>
+	          <a href="https://www.kentaur-enduro-serbia.com/" target="_blank"><img src="media/img/kentaur-logo.png" style="height: 100px"></a>
 	    </div>
 	</div>
 
